[package]
name = "actix-web-delay"
version = "0.1.0"
authors = ["Andrew Bennett <andrew.bennett@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.0"
env_logger = "0.6.1"
futures = "0.1.27"
tokio = "0.1.21"
rand = "0.6.5"
